--- a/files/latex_resume/CV.tex
+++ b/files/latex_resume/CV.tex
@@ -165,6 +165,44 @@
 
   \resumeSubHeadingListEnd
 
+
+
+
+%--------PUBLICATION------------
+\section{Publications}
+\resumeSubHeadingListStart
+
+\item{
+	{SOAR: Synthesis for Open-Source API Refactoring \newline
+		\textbf{Aidan Z.H. Yang}\newline
+		Systems, Programming, Languages, and Applications: Software for Humanity (SPLASH Companion), 2020
+	}
+}
+\item{
+	{Predicting Co-Changes between Functionality Specifications and Source Code in Behavior Driven Development \newline
+		\textbf{Aidan Z.H. Yang}, Daniel Alencar da Costa, Ying Zou \newline
+		IEEE/ACM 16th International Conference on Mining Software Repositories (MSR), 2019
+	}
+}
+\resumeSubHeadingListEnd
+%-------------------------------------------
+
+\section{Publications In-Submission}
+\resumeSubHeadingListStart
+
+\item{
+	{SOAR: Synthesis for Open-Source API Refactoring \newline
+		Ansong Ni, Daniel Ramos, \textbf{Aidan Z.H. Yang}, Ines Lynce, Vasco Manquinho Ruben Martins, Claire Le Goues\newline
+		In-submission to ICSE-2021
+	}
+}
+\item{
+	{An Empirical Study on Release Notes Patterns of Popular Apps in the Google Play Store \newline
+		\textbf{Aidan Z.H. Yang}, Safwat Hassan, Ying Zou, Ahmed E. Hassan \newline
+		In-submission for Empirical Software Engineering Journal (EMSE)
+	}
+}
+\resumeSubHeadingListEnd
 %-------------------------------------------
 
 \section{Teaching}
@@ -173,52 +211,7 @@
 \resumeSubheading
 {Queen's University}{Kingston, ON}
 {TA for Data Structures and Algorithms under Ying Zou}{Winter 2018}
-
-%\resumeSubheading
-%{Mount Royal University}{Calgary, AB}
-%{Piano Instructor}{2015 - 2016}
-%\resumeItemListStart
-%\resumeItem{}
-%{Employed by Dr. Peter Jancewicz to tutor 4 beginner level students for 2 summers}
-%\resumeItemListEnd
-
 \resumeSubHeadingListEnd
-
-
-%--------PUBLICATION------------
-\section{Publications}
-\resumeSubHeadingListStart
-
-
-\item{
-	{An Empirical Study on Release Notes Patterns of
-		Popular Apps in the Google Play Store \newline
-		\textbf{Aidan Z.H. Yang}, Safwat Hassan, Ying Zou, Ahmed E. Hassan \newline
-		In-submission to Empirical Software Engineering Journal (EMSE)
-	}
-}
-\item{
-	{SOAR: A Synthesis Approach
-		for Data Science API Refactoring \newline
-		Ansong Ni, Daniel Ramos, \textbf{Aidan Z.H. Yang}, Ines Lynce, Vasco Manquinho Ruben Martins, Claire Le Goues \newline
-		In-submission to ICSE-2021
-	}
-}
-\item{
-	{SOAR: Synthesis for Open-Source API Refactoring \newline
-		\textbf{Aidan Z.H. Yang}\newline
-		Systems, Programming, Languages, and Applications: Software for Humanity (SPLASH Companion 2020)
-	}
-}
-\item{
-	{Predicting Co-Changes between Functionality Specifications and Source Code in Behavior Driven Development \newline
-		\textbf{Aidan Z.H. Yang}, Daniel Alencar da Costa, Ying Zou \newline
-		The 16th International Conference on Mining Software Repositories (MSR 2019)
-	}
-}
-\resumeSubHeadingListEnd
-%-------------------------------------------
-
 
 %--------AWARDS------------
 \section{Awards}
@@ -226,7 +219,7 @@
 
 \item{SIGSOFT CAPS Student Travel Award for ICSE 2019}
 
-\item{Alberta Alexander Rutherford Scholarship (\$2000 per semester for first two years of university)	
+\item{Alberta Alexander Rutherford Scholarship (\$2000 per year for first two years of university)	
 }
 
 \item{1 of 9 finalists for Alberta Pianofest Society 2016 (international award)	
@@ -246,7 +239,7 @@
         \textbf{Languages}{: Python, R, SQL, C/C++}
     }
     \item{
-        \textbf{Technologies}{: Python PANDAS and Numpy, TensorFlow, PyTorch, R dplyr and ggplot2, PostgreSQL, WinDBG}
+        \textbf{Technologies}{: Python PANDAS and Numpy, TensorFlow, PyTorch, R, PostgreSQL, WinDBG}
     }
  \resumeSubHeadingListEnd
 %-------------------------------------------
