--- a/files/latex_resume/CV.tex
+++ b/files/latex_resume/CV.tex
@@ -75,7 +75,7 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}}
-  \textbf{\href{}{\Large Aidan Z.H. Yang}} & \href{mailto:a.yang@queensu.ca}{a.yang@queensu.ca}
+  \textbf{\href{}{\Large Aidan Yang}} & \href{mailto:a.yang@queensu.ca}{a.yang@queensu.ca}
   \href{https://aidanby.github.io/}{https://aidanby.github.io/} \\
 \end{tabular*}
 
@@ -173,14 +173,14 @@
 \resumeSubHeadingListStart
 
 \item{
-	{SOAR: Synthesis for Open-Source API Refactoring \newline
-		\textbf{Aidan Z.H. Yang}\newline
+	{\textbf{SOAR: Synthesis for Open-Source API Refactoring} \newline
+		\underline{Aidan Z.H. Yang}\newline
 		Systems, Programming, Languages, and Applications: Software for Humanity (SPLASH Companion), 2020
 	}
 }
 \item{
-	{Predicting Co-Changes between Functionality Specifications and Source Code in Behavior Driven Development \newline
-		\textbf{Aidan Z.H. Yang}, Daniel Alencar da Costa, Ying Zou \newline
+	{\textbf{Predicting Co-Changes between Functionality Specifications and Source Code in Behavior Driven Development} \newline
+		\underline{Aidan Z.H. Yang}, Daniel Alencar da Costa, Ying Zou \newline
 		IEEE/ACM 16th International Conference on Mining Software Repositories (MSR), 2019
 	}
 }
@@ -191,15 +191,15 @@
 \resumeSubHeadingListStart
 
 \item{
-	{SOAR: Synthesis for Open-Source API Refactoring \newline
-		Ansong Ni, Daniel Ramos, \textbf{Aidan Z.H. Yang}, Ines Lynce, Vasco Manquinho Ruben Martins, Claire Le Goues\newline
+	{\textbf{SOAR: Synthesis for Open-Source API Refactoring} \newline
+		Ansong Ni, Daniel Ramos, \underline{Aidan Z.H. Yang}, Ines Lynce, Vasco Manquinho Ruben Martins, Claire Le Goues\newline
 		In-submission to ICSE-2021
 	}
 }
 \item{
-	{An Empirical Study on Release Notes Patterns of Popular Apps in the Google Play Store \newline
-		\textbf{Aidan Z.H. Yang}, Safwat Hassan, Ying Zou, Ahmed E. Hassan \newline
-		In-submission for Empirical Software Engineering Journal (EMSE)
+	{\textbf{An Empirical Study on Release Notes Patterns of Popular Apps in the Google Play Store} \newline
+		\underline{Aidan Z.H. Yang}, Safwat Hassan, Ying Zou, Ahmed E. Hassan \newline
+		In-submission to Empirical Software Engineering Journal (EMSE)
 	}
 }
 \resumeSubHeadingListEnd
