--- a/files/CV.tex
+++ b/files/CV.tex
@@ -94,7 +94,7 @@
 
 \resumeSubheading
 {Carnegie Mellon University}{Pittsburgh, PA}
-{Visiting Undergraduate Researcher (REUSE). Advisors: Ruben Martins and Claire Le Goues}{Summer 2020}
+{Undergraduate Researcher (REUSE). Advisors: Ruben Martins and Claire Le Goues}{Summer 2020}
 \resumeItemListStart
 \resumeItem{}{Built a program synthesis pipeline for refactoring deep learning APIs}
 \resumeItem{}{Generated satisfiability modulo theories (SMT) constraints using error message hyponym patterns}
@@ -175,7 +175,7 @@
 \item{
 	{\textbf{SOAR: Synthesis for Open-Source API Refactoring} \newline
 		\underline{Aidan Z.H. Yang}\newline
-		Systems, Programming, Languages, and Applications: Software for Humanity (SPLASH Companion), 2020
+		ACM SIGPLAN International Conference on Systems, Programming, Languages, and Applications: Software for Humanity (SPLASH Companion), 2020
 	}
 }
 \item{
@@ -192,7 +192,7 @@
 
 \item{
 	{\textbf{SOAR: Synthesis for Open-Source API Refactoring} \newline
-		Ansong Ni, Daniel Ramos, \underline{Aidan Z.H. Yang}, Ines Lynce, Vasco Manquinho Ruben Martins, Claire Le Goues\newline
+		Ansong Ni, Daniel Ramos, \underline{Aidan Z.H. Yang}, Ines Lynce, Vasco Manquinho, Ruben Martins, Claire Le Goues\newline
 		In-submission to ICSE-2021
 	}
 }
