--- a/files/CV.tex
+++ b/files/CV.tex
@@ -193,13 +193,13 @@
 \item{
 	{\textbf{SOAR: Synthesis for Open-Source API Refactoring} \newline
 		Ansong Ni, Daniel Ramos, \underline{Aidan Z.H. Yang}, Ines Lynce, Vasco Manquinho, Ruben Martins, Claire Le Goues\newline
-		In-submission to ICSE-2021
+		In-submission at ICSE-2021
 	}
 }
 \item{
 	{\textbf{An Empirical Study on Release Notes Patterns of Popular Apps in the Google Play Store} \newline
 		\underline{Aidan Z.H. Yang}, Safwat Hassan, Ying Zou, Ahmed E. Hassan \newline
-		In-submission to Empirical Software Engineering Journal (EMSE)
+		Under review at Empirical Software Engineering Journal (EMSE)
 	}
 }
 \resumeSubHeadingListEnd
