--- a/files/CV.tex
+++ b/files/CV.tex
@@ -75,7 +75,7 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}}
-  \textbf{\href{}{\Large Aidan Yang}} & \href{mailto:a.yang@queensu.ca}{a.yang@queensu.ca}
+  \textbf{{\Large Aidan Yang}} & \href{mailto:a.yang@queensu.ca}{a.yang@queensu.ca}
   \href{https://aidanby.github.io/}{https://aidanby.github.io/} \\
 \end{tabular*}
 
@@ -86,6 +86,10 @@
     \resumeSubheading
     {Queen’s University}{Kingston, Ontario}
       { Bachelor of Applied Science, Computer Engineering and Mathematics}{Expected graduation: 2021 June}
+      \resumeItemListStart
+      \resumeItem{}{Thesis: Using Rényi information measures to model the loss function of generative adversarial networks (GANs)}
+      \resumeItemListEnd
+     	
   \resumeSubHeadingListEnd
 
 %-----------Research-----------------
@@ -96,7 +100,7 @@
 {Carnegie Mellon University}{Pittsburgh, PA}
 {Undergraduate Researcher (REUSE). Advisors: Ruben Martins and Claire Le Goues}{Summer 2020}
 \resumeItemListStart
-\resumeItem{}{Built a program synthesis pipeline for refactoring deep learning APIs}
+\resumeItem{}{Built a program synthesis pipeline for refactoring data-science APIs (e.g., Tensorflow, Pytorch, Dplyr)}
 \resumeItem{}{Generated satisfiability modulo theories (SMT) constraints using error message hyponym patterns}
 \resumeItem{}{In-submission full, technical track conference paper to ICSE-2021 }
 \resumeItemListEnd
@@ -137,7 +141,7 @@
 
     \resumeSubheading
       {AMD}{Markham, ON}
-      {Software Developer}{Sept 2019 - May 2020}
+      {Software Developer (Display Abstraction Layer)}{Sept 2019 - May 2020}
       \resumeItemListStart
         \resumeItem{}
           {Developed High Dynamic Range (HDR) and Freesync features for GPU drivers}
@@ -191,7 +195,7 @@
 \resumeSubHeadingListStart
 
 \item{
-	{\textbf{SOAR: Synthesis for Open-Source API Refactoring} \newline
+	{\textbf{SOAR: A Synthesis Approach for Data Science API Refactoring} \newline
 		Ansong Ni, Daniel Ramos, \underline{Aidan Z.H. Yang}, Ines Lynce, Vasco Manquinho, Ruben Martins, Claire Le Goues\newline
 		In-submission at ICSE-2021
 	}
