--- a/files/CV.tex
+++ b/files/CV.tex
@@ -87,7 +87,7 @@
     {Queen’s University}{Kingston, Ontario}
       { Bachelor of Applied Science, Computer Engineering and Mathematics}{Expected graduation: 2021 June}
       \resumeItemListStart
-      \resumeItem{}{Thesis: Using Rényi information measures to model the loss function of generative adversarial networks (GANs)}
+      \resumeItem{}{Thesis: modeling the loss function of generative adversarial networks (GANs) with Rényi information measures}
       \resumeItemListEnd
      	
   \resumeSubHeadingListEnd
