--- a/files/CV.tex
+++ b/files/CV.tex
@@ -124,8 +124,6 @@
 \resumeItem{}
 {Investigated the co-evolution of documentation and source code in Behavior Driven Development}
 \resumeItem{}
-{Applied reinforcement learning techniques to model repository behavior from 133 open-source projects}
-\resumeItem{}
 {Built NLP models to establish links between evolving software artifacts achieving 79.8\% accuracy}
 \resumeItem{}
 {Accepted full, technical track conference paper at MSR-2019 as first author}
@@ -154,9 +152,7 @@
 		{Android Developer}{Sept 2018 - May 2019}
 		\resumeItemListStart
 		\resumeItem{}
-		{Built an Android AR application that places rendered furniture in rooms}
-		\resumeItem{}
-		{App (LucyAR) published on the Google Play Store on March $18^{th}$ 2019}
+		{Built an Android AR app (LucyAR) published on the Google Play Store}
 		\resumeItemListEnd
 
     \resumeSubheading
@@ -185,7 +181,7 @@
 \item{
 	{\textbf{Predicting Co-Changes between Functionality Specifications and Source Code in Behavior Driven Development} \newline
 		\underline{Aidan Z.H. Yang}, Daniel Alencar da Costa, Ying Zou \newline
-		IEEE/ACM 16th International Conference on Mining Software Repositories (MSR), 2019
+		IEEE/ACM 16th International Conference on Mining Software Repositories (MSR), pp. 534-544, 2019
 	}
 }
 \resumeSubHeadingListEnd
@@ -216,21 +212,29 @@
 {Queen's University}{Kingston, ON}
 {TA for Data Structures and Algorithms under Ying Zou}{Winter 2018}
 \resumeSubHeadingListEnd
+%-------------------------------------------
+
+\section{Presentations}
+\resumeSubHeadingListStart
+\item{SOAR: Synthesis for Open-Source API Refactoring. Presented at: Systems, Programming, Languages, and Applications: Software for Humanity (SPLASH 2020) Student Research Competition. November 2020}
+
+\item{SOAR: A Synthesis Approach for Data Science API Refactoring. Presented at: Carnegie Mellon University - Institute for Software Research. August 2020}
+
+\item{Predicting Co-Changes between Functionality Specifications and Source Code in Behavior Driven Development. Presented at: International Conference on Mining Software Repositories (MSR). May 2019	
+}
+\resumeSubHeadingListEnd
 
 %--------AWARDS------------
 \section{Awards}
 \resumeSubHeadingListStart
+\item{Second place at Systems, Programming, Languages, and Applications: Software for Humanity (SPLASH 2020) Student Research Competition}
 
 \item{SIGSOFT CAPS Student Travel Award for ICSE 2019}
+
 
 \item{Alberta Alexander Rutherford Scholarship (\$2000 per year for first two years of university)	
 }
 
-\item{1 of 9 finalists for Alberta Pianofest Society 2016 (international award)	
-}
-
-\item{4th place Canadian Music Competition 2015 (national award)
-}
 
 \resumeSubHeadingListEnd
 %-------------------------------------------
