--- a/files/CV.tex
+++ b/files/CV.tex
@@ -102,7 +102,7 @@
 \resumeItemListStart
 \resumeItem{}{Built a program synthesis pipeline for refactoring data-science APIs (e.g., Tensorflow, Pytorch, Dplyr)}
 \resumeItem{}{Generated satisfiability modulo theories (SMT) constraints using error message hyponym patterns}
-\resumeItem{}{In-submission full, technical track conference paper to ICSE-2021 }
+\resumeItem{}{Accepted full, technical track conference paper at ICSE-2021 }
 \resumeItemListEnd
 
 
@@ -173,9 +173,16 @@
 \resumeSubHeadingListStart
 
 \item{
+	{\textbf{SOAR: A Synthesis Approach for Data Science API Refactoring} \newline
+		Ansong Ni, Daniel Ramos, \underline{Aidan Z.H. Yang}, Ines Lynce, Vasco Manquinho, Ruben Martins, Claire Le Goues\newline
+		To-appear in IEEE International Conference on Software Engineering (ICSE), 2021
+	}
+}
+
+\item{
 	{\textbf{SOAR: Synthesis for Open-Source API Refactoring} \newline
 		\underline{Aidan Z.H. Yang}\newline
-		ACM SIGPLAN International Conference on Systems, Programming, Languages, and Applications: Software for Humanity (SPLASH Companion), 2020
+		ACM SIGPLAN International Conference on Systems, Programming, Languages, and Applications: Software for Humanity (SPLASH Companion), pp. 10-12, 2020
 	}
 }
 \item{
@@ -190,16 +197,11 @@
 \section{Publications In-Submission}
 \resumeSubHeadingListStart
 
-\item{
-	{\textbf{SOAR: A Synthesis Approach for Data Science API Refactoring} \newline
-		Ansong Ni, Daniel Ramos, \underline{Aidan Z.H. Yang}, Ines Lynce, Vasco Manquinho, Ruben Martins, Claire Le Goues\newline
-		In-submission at ICSE-2021
-	}
-}
+
 \item{
 	{\textbf{An Empirical Study on Release Notes Patterns of Popular Apps in the Google Play Store} \newline
 		\underline{Aidan Z.H. Yang}, Safwat Hassan, Ying Zou, Ahmed E. Hassan \newline
-		Under review at Empirical Software Engineering Journal (EMSE)
+		Under review in Journal of Empirical Software Engineering (EMSE)
 	}
 }
 \resumeSubHeadingListEnd
