--- a/files/CV.tex
+++ b/files/CV.tex
@@ -201,7 +201,7 @@
 \item{
 	{\textbf{An Empirical Study on Release Notes Patterns of Popular Apps in the Google Play Store} \newline
 		\underline{Aidan Z.H. Yang}, Safwat Hassan, Ying Zou, Ahmed E. Hassan \newline
-		Under review in Journal of Empirical Software Engineering (EMSE)
+		Under review in Empirical Software Engineering (EMSE)
 	}
 }
 \resumeSubHeadingListEnd
