--- a/files/CV.tex
+++ b/files/CV.tex
@@ -101,33 +101,19 @@
 {Undergraduate Researcher (REUSE). Advisors: Ruben Martins and Claire Le Goues}{Summer 2020}
 \resumeItemListStart
 \resumeItem{}{Built a program synthesis pipeline for refactoring data-science APIs (e.g., Tensorflow, Pytorch, Dplyr)}
-\resumeItem{}{Generated satisfiability modulo theories (SMT) constraints using error message hyponym patterns}
-\resumeItem{}{Accepted full, technical track conference paper at ICSE-2021 }
+\resumeItem{}{Generated satisfiability modulo theories (SMT) constraints using NLP and deep learning models}
 \resumeItemListEnd
 
 
 \resumeSubheading
 {Queen's University}{Kingston, ON}
-{Undergraduate Researcher. Advisors: Ying Zou and Ahmed E. Hassan}{May 2019 - May 2020}
+{Undergraduate Researcher. Advisors: Ying Zou and Ahmed E. Hassan}{May 2018 - May 2020}
 \resumeItemListStart
-\resumeItem{}
-{Investigated mobile development release documentation}
 \resumeItem{}{Performed a novel empirical study on 69,851 releases and 67.7 million user reviews for 2,232 apps}
 \resumeItem{}
-{In-submission EMSE journal paper as first author}
+{Built NLP models to establish links between evolving software artifacts achieving 79.8\% accuracy}
 \resumeItemListEnd
 
-\resumeSubheading
-{Queen's University}{Kingston, ON}
-{Undergraduate Researcher. Advisors: Daniel Alencar da Costa and Ying Zou}{May 2018 - May 2019}
-\resumeItemListStart
-\resumeItem{}
-{Investigated the co-evolution of documentation and source code in Behavior Driven Development}
-\resumeItem{}
-{Built NLP models to establish links between evolving software artifacts achieving 79.8\% accuracy}
-\resumeItem{}
-{Accepted full, technical track conference paper at MSR-2019 as first author}
-\resumeItemListEnd
 
 \resumeSubHeadingListEnd
 
@@ -139,7 +125,7 @@
 
     \resumeSubheading
       {AMD}{Markham, ON}
-      {Software Developer (Display Abstraction Layer)}{Sept 2019 - May 2020}
+      {Software Developer}{Sept 2019 - May 2020}
       \resumeItemListStart
         \resumeItem{}
           {Developed High Dynamic Range (HDR) and Freesync features for GPU drivers}
@@ -233,11 +219,6 @@
 
 \item{SIGSOFT CAPS Student Travel Award for ICSE 2019}
 
-
-\item{Alberta Alexander Rutherford Scholarship (\$2000 per year for first two years of university)	
-}
-
-
 \resumeSubHeadingListEnd
 %-------------------------------------------
 
@@ -246,10 +227,10 @@
 \section{Programming Skills}
  \resumeSubHeadingListStart
    \item{
-        \textbf{Languages}{: Python, R, SQL, C/C++}
+        \textbf{Languages}{: Python, C/C++, R, SQL}
     }
     \item{
-        \textbf{Technologies}{: Python PANDAS and Numpy, TensorFlow, PyTorch, R, PostgreSQL, WinDBG}
+        \textbf{Technologies}{: Python PANDAS and Numpy, TensorFlow, PyTorch, PostgreSQL, WinDBG}
     }
  \resumeSubHeadingListEnd
 %-------------------------------------------
