--- a/files/CV.tex
+++ b/files/CV.tex
@@ -75,19 +75,30 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}}
-  \textbf{{\Large Aidan Yang}} & \href{mailto:a.yang@queensu.ca}{a.yang@queensu.ca}
+  \textbf{{\Large Aidan Yang}} & \href{mailto:aidan@cmu.edu}{aidan@cmu.edu}
   \href{https://aidanby.github.io/}{https://aidanby.github.io/} \\
 \end{tabular*}
 
 
 %-----------EDUCATION-----------------
 \section{Education}
+
+
+
   \resumeSubHeadingListStart
+  
+  \resumeSubheading
+  {Carnegie Mellon University}{Pittsburgh, PA}
+  {PhD in Software Engineering}{Expected: 2026}
+  \resumeItemListStart
+  	\resumeItem{}{Research: software engineering, programming languages, and machine learning}
+  \resumeItemListEnd
+  
     \resumeSubheading
-    {Queen’s University}{Kingston, Ontario}
-      { Bachelor of Applied Science, Computer Engineering and Mathematics}{Expected graduation: 2021 June}
+    {Queen’s University}{Kingston, ON}
+      {BEng, Computer Engineering and Mathematics}{2021}
       \resumeItemListStart
-      \resumeItem{}{Thesis: modeling the loss function of generative adversarial networks (GANs) with Rényi information measures}
+      \resumeItem{}{Thesis: modeling the loss function of generative adversarial networks with Rényi information measures}
       \resumeItemListEnd
      	
   \resumeSubHeadingListEnd
@@ -141,13 +152,6 @@
 		{Built an Android AR app (LucyAR) published on the Google Play Store}
 		\resumeItemListEnd
 
-    \resumeSubheading
-      {GF Securities}{Guangzhou, China}
-      {Investment Banking Analyst}{Summer 2017}
-      \resumeItemListStart
-        \resumeItem{}
-          {Advised initial public offering (IPO) transitions for clients of the industrial group}
-      \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
@@ -227,10 +231,10 @@
 \section{Programming Skills}
  \resumeSubHeadingListStart
    \item{
-        \textbf{Languages}{: Python, C/C++, R, SQL}
+        \textbf{Languages}{: Python, C++, R, SQL}
     }
     \item{
-        \textbf{Technologies}{: Python PANDAS and Numpy, TensorFlow, PyTorch, PostgreSQL, WinDBG}
+        \textbf{Technologies}{: Python PANDAS and Numpy, TensorFlow, PyTorch, PostgreSQL}
     }
  \resumeSubHeadingListEnd
 %-------------------------------------------
