--- a/files/CV.tex
+++ b/files/CV.tex
@@ -89,7 +89,7 @@
   
   \resumeSubheading
   {Carnegie Mellon University}{Pittsburgh, PA}
-  {PhD in Software Engineering}{Expected: 2026}
+  {PhD, Software Engineering}{Expected: 2026}
   \resumeItemListStart
   	\resumeItem{}{Research: software engineering, programming languages, and machine learning}
   \resumeItemListEnd
