--- a/files/CV.tex
+++ b/files/CV.tex
@@ -91,14 +91,14 @@
   {Carnegie Mellon University}{Pittsburgh, PA}
   {PhD in Software Engineering}{Expected: 2026}
   \resumeItemListStart
-  	\resumeItem{}{Research: software engineering, programming languages, and machine learning}
+  	\resumeItem{}{Research: program synthesis, program analysis, machine learning}
   \resumeItemListEnd
   
     \resumeSubheading
     {Queen’s University}{Kingston, ON}
       {BEng, Computer Engineering and Mathematics}{2021}
       \resumeItemListStart
-      \resumeItem{}{Thesis: modeling the loss function of generative adversarial networks with Rényi information measures}
+      \resumeItem{}{Thesis: modeling the loss function of generative adversarial networks (GANs) with Rényi information measures}
       \resumeItemListEnd
      	
   \resumeSubHeadingListEnd
@@ -139,7 +139,7 @@
       {Software Developer}{Sept 2019 - May 2020}
       \resumeItemListStart
         \resumeItem{}
-          {Developed High Dynamic Range (HDR) and Freesync features for GPU drivers}
+          {Developed High Dynamic Range (HDR) and Freesync features for GPU drivers }
 
 
       \resumeItemListEnd
@@ -149,7 +149,7 @@
 		{Android Developer}{Sept 2018 - May 2019}
 		\resumeItemListStart
 		\resumeItem{}
-		{Built an Android AR app (LucyAR) published on the Google Play Store}
+		{Built an Android AR app for student residence furnishing (LucyAR) published on the Google Play Store}
 		\resumeItemListEnd
 
 
@@ -163,9 +163,16 @@
 \resumeSubHeadingListStart
 
 \item{
+	{\textbf{An Empirical Study on Release Notes Patterns of Popular Apps in the Google Play Store} \newline
+		\underline{Aidan Z.H. Yang}, Safwat Hassan, Ying Zou, Ahmed E. Hassan \newline
+	Journal of Empirical Software Engineering (EMSE), 2021
+	}
+}
+
+\item{
 	{\textbf{SOAR: A Synthesis Approach for Data Science API Refactoring} \newline
 		Ansong Ni, Daniel Ramos, \underline{Aidan Z.H. Yang}, Ines Lynce, Vasco Manquinho, Ruben Martins, Claire Le Goues\newline
-		To-appear in IEEE International Conference on Software Engineering (ICSE), 2021
+		IEEE International Conference on Software Engineering (ICSE), pp. 112-124, 2021
 	}
 }
 
@@ -182,20 +189,6 @@
 	}
 }
 \resumeSubHeadingListEnd
-%-------------------------------------------
-
-\section{Publications In-Submission}
-\resumeSubHeadingListStart
-
-
-\item{
-	{\textbf{An Empirical Study on Release Notes Patterns of Popular Apps in the Google Play Store} \newline
-		\underline{Aidan Z.H. Yang}, Safwat Hassan, Ying Zou, Ahmed E. Hassan \newline
-		Under review in Empirical Software Engineering (EMSE)
-	}
-}
-\resumeSubHeadingListEnd
-%-------------------------------------------
 
 \section{Teaching}
 \resumeSubHeadingListStart
