--- a/files/CV.tex
+++ b/files/CV.tex
@@ -76,7 +76,7 @@
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}}
   \textbf{{\Large Aidan Yang}} & \href{mailto:aidan@cmu.edu}{aidan@cmu.edu}
-  \href{https://aidanby.github.io/}{https://aidanby.github.io/} \\
+  \href{https://cs.cmu.edu/~aidan}{https://cs.cmu.edu/~aidan} \\
 \end{tabular*}
 
 
@@ -89,7 +89,7 @@
   
   \resumeSubheading
   {Carnegie Mellon University}{Pittsburgh, PA}
-  {PhD in Software Engineering}{Expected: 2026}
+  {PhD in Software Engineering. Advisors: Vincent Hellendoorn, Ruben Martins, and Claire Le Goues}{Expected: 2026}
   \resumeItemListStart
   	\resumeItem{}{Research: program synthesis, program analysis, machine learning}
   \resumeItemListEnd
@@ -136,7 +136,7 @@
 
     \resumeSubheading
       {AMD}{Markham, ON}
-      {Software Developer}{Sept 2019 - May 2020}
+      {Software Development Engineer}{May 2019 - May 2020}
       \resumeItemListStart
         \resumeItem{}
           {Developed High Dynamic Range (HDR) and Freesync features for GPU drivers }
@@ -152,6 +152,13 @@
 		{Built an Android AR app for student residence furnishing (LucyAR) published on the Google Play Store}
 		\resumeItemListEnd
 
+	\resumeSubheading
+		{GF Securities}{Hongkong}
+		{Investment Banking Summer Analyst }{May 2017 - Sept 2017}
+		\resumeItemListStart
+		\resumeItem{}
+		{Advised IPO processes in the industrial group}
+		\resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
@@ -159,7 +166,7 @@
 
 
 %--------PUBLICATION------------
-\section{Publications}
+\section{Selected Publications}
 \resumeSubHeadingListStart
 
 \item{
@@ -176,12 +183,6 @@
 	}
 }
 
-\item{
-	{\textbf{SOAR: Synthesis for Open-Source API Refactoring} \newline
-		\underline{Aidan Z.H. Yang}\newline
-		ACM SIGPLAN International Conference on Systems, Programming, Languages, and Applications: Software for Humanity (SPLASH Companion), pp. 10-12, 2020
-	}
-}
 \item{
 	{\textbf{Predicting Co-Changes between Functionality Specifications and Source Code in Behavior Driven Development} \newline
 		\underline{Aidan Z.H. Yang}, Daniel Alencar da Costa, Ying Zou \newline
@@ -214,7 +215,7 @@
 %--------AWARDS------------
 \section{Awards}
 \resumeSubHeadingListStart
-\item{Second place at Systems, Programming, Languages, and Applications: Software for Humanity (SPLASH 2020) Student Research Competition}
+\item{Second Place at Systems, Programming, Languages, and Applications: Software for Humanity (SPLASH 2020) Student Research Competition}
 
 \item{SIGSOFT CAPS Student Travel Award for ICSE 2019}
 
